Add documentation in OpenAPI for OAuth login
Took 1 hour 40 minutes
